--- a/SandBox/res/layout/simple_form.xml
+++ b/SandBox/res/layout/simple_form.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:background="#11ffffff"
+        android:background="@color/semi_transparent"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:padding="@dimen/activity_vertical_margin" >
@@ -28,6 +28,16 @@
             android:text="@string/app_name"
             android:textColor="#ffffff"
             android:textSize="45dp" />
+
+        <Spinner
+            android:id="@+id/barrios"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/transparent"
+            android:popupBackground="@color/semi_black"
+            android:drawSelectorOnTop="true"
+            android:prompt="@string/seleccione_barrio"
+            android:spinnerMode="dropdown" />
 
         <EditText
             android:id="@+id/editText1"
