--- a/SandBox/res/values/dimens.xml
+++ b/SandBox/res/values/dimens.xml
@@ -4,5 +4,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="texto_spinner">20dp</dimen>
+    <dimen name="mini_text">12dp</dimen>
 
 </resources>
