--- a/SandBox/res/layout/activity_main.xml
+++ b/SandBox/res/layout/activity_main.xml
@@ -1,40 +1,34 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/AppTheme"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     tools:context="ar.uba.fi.sandbox.MainActivity" >
 
-    <ImageView
-        android:contentDescription="fondo"
-        android:id="@+id/item_preview"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:scaleType="centerCrop"
-        android:src="@drawable/city" />
-
     <LinearLayout
+        style="@style/AppTheme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:background="#11FFFFFF"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:padding="@dimen/activity_vertical_margin" >
 
         <TextView
             android:id="@+id/titulo_item"
+            style="@style/AppBaseTheme"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
             android:text="@string/app_name"
-            android:textColor="#ffffff"
+            android:textColor="@color/apptheme_color"
             android:textSize="45dp" />
 
         <Button
             android:id="@+id/buttonGo"
+            style="@style/ButtonAppTheme"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#00ffffff"
             android:text="Entrar"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="#ffffff"
