--- a/SandBox/res/layout/simple_form.xml
+++ b/SandBox/res/layout/simple_form.xml
@@ -4,12 +4,20 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     tools:context="ar.uba.fi.sandbox.MainActivity" >
+
+    <ScrollView
+        android:id="@+id/scrollView1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+         android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+         >
+
+    
     
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:padding="30dp" >
@@ -55,14 +63,33 @@
              android:textColor="@color/apptheme_color"
              android:textSize="@dimen/mini_text" />
 
-        <Button
-            android:id="@+id/simple_search"
-            style="@style/ButtonAppTheme"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Buscar"
-            android:textColor="@android:color/white" />
+         <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:gravity="center_horizontal|center_vertical" >
+
+             <Button
+                 android:id="@+id/simple_search"
+                 style="@style/ButtonAppTheme"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_weight="0"
+                 android:text="@string/simple_search"
+                 android:textColor="@android:color/white" />
+
+             <Button
+                 android:id="@+id/advanced_search"
+                 style="@style/ButtonAppTheme"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_weight="0"
+                 android:text="@string/advanced_search"
+                 android:textColor="@android:color/white"
+                 android:textSize="@dimen/mini_text" />
+
+         </LinearLayout>
 
     </LinearLayout>
-    
+        
+    </ScrollView>
 </RelativeLayout>
