--- a/SandBox/res/values/colors.xml
+++ b/SandBox/res/values/colors.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-       <color name="apptheme_color">#e91e63</color>
+     <color name="disabled">#cccccc</color>
 </resources>
