--- a/SandBox/res/layout/advanced_search.xml
+++ b/SandBox/res/layout/advanced_search.xml
@@ -15,77 +15,81 @@
         android:gravity="center_horizontal"
         android:orientation="vertical" >
         
-        <ar.uba.fi.sandbox.custom.CustomComponentsGroup
+        <ar.uba.fi.mileem.custom.CustomComponentsGroup
+            android:id="@+id/caracteristicas_generales"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             edit:label="@string/caracteristicas_generales" >
-        <ar.uba.fi.sandbox.custom.MonedaComponent
+
+        <ar.uba.fi.mileem.custom.ExchangeComponent
             android:id="@+id/monedaComponent1"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <ar.uba.fi.sandbox.custom.RangoPreciosComponent
+        <ar.uba.fi.mileem.custom.PriceRangeComponent
             android:id="@+id/rangoPreciosComponent1"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <ar.uba.fi.sandbox.custom.EditTextComponent
+        <ar.uba.fi.mileem.custom.EditTextComponent
             android:id="@+id/editTextComponent1"
             edit:name="sup_cubierta"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="numberDecimal"
-            edit:hint="@string/sup_unidad"
+            edit:hint="@string/mas_de"
             edit:label="@string/sup_cubierta" />
 
-        <ar.uba.fi.sandbox.custom.EditTextComponent
+        <ar.uba.fi.mileem.custom.EditTextComponent
             android:id="@+id/editTextComponent2"
             edit:name="sup_total"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="numberDecimal"
-            edit:hint="@string/sup_unidad"
+            edit:hint="@string/mas_de"
             edit:label="@string/sup_total" />
 
-        <ar.uba.fi.sandbox.custom.EditTextComponent
+        <ar.uba.fi.mileem.custom.EditTextComponent
             android:id="@+id/editTextComponent3"
             edit:name="antiguedad"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="number"
-            edit:hint="@string/antiguedad_unidad"
+            edit:hint="@string/menos_de"
             edit:label="@string/antiguedad" />
 
-        <ar.uba.fi.sandbox.custom.EditTextComponent
+        <ar.uba.fi.mileem.custom.EditTextComponent
             android:id="@+id/editTextComponent4"
             edit:name="expensas"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="number"
-            edit:hint="@string/expensas_unidad"
+            edit:hint="@string/menos_de"
             edit:label="@string/expensas" />
 
-        <ar.uba.fi.sandbox.custom.BooleanComponent
+        <ar.uba.fi.mileem.custom.BooleanComponent
             android:id="@+id/booleanComponent1"
             edit:name="a_estrenar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             edit:label="@string/a_estrenar" />
-       </ar.uba.fi.sandbox.custom.CustomComponentsGroup>
+       </ar.uba.fi.mileem.custom.CustomComponentsGroup>
 
 		<View
 		    style="@style/Divider"
 		    android:layout_marginBottom="@dimen/activity_vertical_margin"
 		    android:layout_marginTop="@dimen/activity_vertical_margin" />
 
-        <ar.uba.fi.sandbox.custom.CustomComponentsGroup
+        <ar.uba.fi.mileem.custom.CustomComponentsGroup
+            android:id="@+id/caracteristicas_extras"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            edit:categories="1,2"
             edit:label="@string/otras_caracteristicas" >
 
-            <ar.uba.fi.sandbox.custom.EditTextComponent
+            <ar.uba.fi.mileem.custom.EditTextComponent
                 android:id="@+id/editTextComponent5"
                 edit:name="ambientes"
                 android:layout_width="match_parent"
@@ -94,7 +98,7 @@
                 edit:hint="@string/mas_de"
                 edit:label="@string/cant_ambientes" />
 
-            <ar.uba.fi.sandbox.custom.EditTextComponent
+            <ar.uba.fi.mileem.custom.EditTextComponent
                 android:id="@+id/editTextComponent6"
                 edit:name="banos"
                 android:layout_width="match_parent"
@@ -103,20 +107,20 @@
                 edit:hint="@string/mas_de"
                 edit:label="@string/banos" />
 
-            <ar.uba.fi.sandbox.custom.BooleanComponent
+            <ar.uba.fi.mileem.custom.BooleanComponent
                 android:id="@+id/booleanComponent2"
                 edit:name="balcon"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 edit:label="@string/balcon" />
 
-            <ar.uba.fi.sandbox.custom.BooleanComponent
+            <ar.uba.fi.mileem.custom.BooleanComponent
                 android:id="@+id/booleanComponent3"
                 edit:name="en_suite"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 edit:label="@string/en_suite" />
-        </ar.uba.fi.sandbox.custom.CustomComponentsGroup>
+        </ar.uba.fi.mileem.custom.CustomComponentsGroup>
     </LinearLayout>
 
 </ScrollView>
