--- a/SandBox/res/menu/advanced_search_menu.xml
+++ b/SandBox/res/menu/advanced_search_menu.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="ar.uba.fi.sandbox.MainActivity" >
+    tools:context="ar.uba.fi.mileem.MainActivity" >
 
      <item android:id="@+id/action_search"
           android:icon="@drawable/ic_action_search"
