--- a/SandBox/res/layout/customdialog.xml
+++ b/SandBox/res/layout/customdialog.xml
@@ -5,7 +5,8 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:layout_gravity="center"
-            android:background="@drawable/apptheme_btn_default_focused_holo_light"
+            android:layout_margin="0dp"
+            android:background="@drawable/dialog_background"
             android:orientation="vertical"
             android:padding="10dp" >
 
@@ -26,6 +27,7 @@
             android:layout_below="@+id/titulo"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
+            android:gravity="center"
             android:text="@string/dummy"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="#ffffff" />
