--- a/SandBox/res/values/colors.xml
+++ b/SandBox/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
      <color name="disabled">#cccccc</color>
       <color name="app_color_contrast">#ffffff</color>
+      <color name="highlighted_publication_background">#fce4ec</color>
 </resources>
